overflow fix

--- a/styles/abstracts/_global.scss
+++ b/styles/abstracts/_global.scss
@@ -2,7 +2,7 @@
 @use "../abstracts/variables";
 
 html {
-  // overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 body {
