--- a/styles/style.css
+++ b/styles/style.css
@@ -66,6 +66,10 @@ ul[class] {
   font-display: swap;
   font-style: normal;
 }
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 1.25rem;
